# NeuroCF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cpu.cpp  gpu.cpp  main.cpp
examples/ExternalLayers/: external_highest_cpu.cpp  external_highest_gpu.cpp
examples/High_API/: hybrid_cpu.cpp  hybrid_gpu.cpp  simple_gpu.cpp
examples/High_API/CPU/: external_layers.cpp  simple.cpp  stress.cpp
examples/High_API/GPU/: external_layers.cpp  simple.cpp  stress.cpp
examples/Simple/: simple_high_cpu.cpp  simple_high_gpu.cpp  simple_highest_cpu.cpp  simple_highest_gpu.cpp  simple_low_cpu.cpp  simple_low_gpu.cpp  simple_lowest_cpu.cpp  simple_lowest_gpu.cpp
examples/StressTest/: stress_highest_cpu.cpp  stress_highest_gpu.cpp
include/NeuroCF/: NeuroCF.hpp
